--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,13 @@ h2 {
   letter-spacing: .15rem;
   line-height: 2.5rem;
 }
+h3 {
+  font-weight: 300;
+  text-transform: uppercase;
+  font-size: 16px;
+  letter-spacing: .15rem;
+  line-height: 2.5rem;
+}
 p {
   font-weight: 300;
   line-height: 2.3rem;
@@ -139,6 +146,9 @@ p {
 .navbar-default .navbar-nav>li>a:hover {
   color: #9c8061;
   border-bottom: 3px solid #9c8061;
+  transition-property: all;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-out;
 }
 
 /* Home Page */
@@ -202,12 +212,46 @@ body#home {
 /* Footers */
 footer {
   background: #272727;
+  color: #ccc;
+  font-size: 90%;
+  letter-spacing: .1rem;
+  line-height: 2rem;
+  font-weight: 300;
+}
+footer .section-heading {
+  border-bottom: 1px dotted #888b8e;
   color: #e7e7e7;
 }
-footer .glyphicon {
-  font-size: 20px;
-  margin-bottom: 20px;
-  color: #f4511e;
+/*
+footer a:active, footer a:visited {
+  color: #e7e7e7;
+}
+*/
+footer .link-list a {
+  color: #ccc;
+  font-size: 11px;
+  letter-spacing: .05rem;
+  padding: 6px 0px;
+  display: inline-block;
+  text-transform: uppercase;
+}
+footer .link-list a:hover {
+  color: #eee;
+  text-decoration: none;
+}
+footer .link-list li {
+  border-bottom: solid 1px #353535;
+}
+footer .link-list li i {
+    color: #bbb;
+    float: right;
+    margin-top: 10px;
+}
+footer .map-bg {
+  background: url(../img/map-img.png) 5px 60px no-repeat;
+}
+footer address {
+  line-height: 2.4rem;
 }
 footer .footer-logo {
   height: 36px;
@@ -217,4 +261,14 @@ footer .footer-logo {
 .copyright {
   background: #181818;
   border-top: 1px solid #181818;
+  font-size: 80%;
+  padding-top: 4px;
+}
+.copyright a {
+  padding-left: 4px;
+  padding-right: 4px;
+  color: #81674b;
+}
+.copyright .glyphicon {
+  text-align: right;
 }
