--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,7 +43,7 @@ p {
   line-height: 2rem;
 }
 .bold {
-  font-weight: 400;
+  font-weight: 700;
 }
 .padding-40-60 {
   padding: 40px 60px;
@@ -187,10 +187,14 @@ body#home {
   margin-bottom: 0;
   text-transform: uppercase;
 }
+.home-about h2 {
+  font-size: 24px;
+}
 .home-about p {
   font-size: 16px;
 }
 .home-about .cta p {
+  font-size: 14px;
   padding: 0 0 0 20px;
   border-left: 1px dotted #eee;
   margin-bottom: 20px;
@@ -229,12 +233,12 @@ body#home {
   border-bottom: 1px solid #eee;
 }
 .product-thumbnails .caption h4 {
-  font-size: 100%;
+  font-size: 14px;
   margin-top: 10px;
   margin-bottom: 5px;
 }
 .product-thumbnails .caption p {
-  font-size: 80%;
+  font-size: 12px;
   line-height: 1.6rem;
 }
 .product-thumbnails a.btn {
