--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -263,7 +263,7 @@ body#home {
   font-style: italic;
   line-height: 180%;
   margin: 10px auto;
-  color: #949494;
+  color: #b6b6b6;
   letter-spacing: .1rem;
   font-family: 'Roboto Slab', serif;
   font-weight: 100;
@@ -273,7 +273,7 @@ body#home {
   font-size: 100%;
   margin-top: 0;
   font-weight: 400;
-  color: #b6b6b6;
+  color: #ccc;
 }
 #wordCarousel .item img {
   margin-bottom: 40px;
@@ -292,11 +292,6 @@ footer .section-heading {
   border-bottom: 1px dotted #888b8e;
   color: #e7e7e7;
 }
-/*
-footer a:active, footer a:visited {
-  color: #e7e7e7;
-}
-*/
 footer .link-list a {
   color: #ccc;
   letter-spacing: .05rem;
