--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -255,7 +255,7 @@ body#home {
 }
 #wordCarousel {
   background: #e8e8e8 url("../img/concrete_seamless.png") repeat;
-  min-height: 320px;
+  min-height: 325px;
   text-align: center;
 /*  border-bottom: 22px solid #9c8061;*/
 }
@@ -279,6 +279,12 @@ body#home {
 }
 #wordCarousel .item img {
   margin-bottom: 40px;
+}
+#wordCarousel .carousel-indicators li {
+  border: 1px solid #a7a7a7;
+}
+#wordCarousel .carousel-indicators .active {
+  background-color: #a7a7a7;
 }
 
 /* Footers */
