--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -112,7 +112,14 @@ p {
 .heading-img{
   padding: 0;
 }
-
+.to-top {
+  text-align: right;
+  font-size: 11px;
+  font-weight: 300;
+  text-transform: uppercase;
+  padding-top: 10px;
+  border-top: 1px solid #e9e9e9;
+}
 /* Header & Navigation */
 .navbar .utilities {
 /*  background-color: #444;*/
@@ -330,24 +337,23 @@ p {
   text-decoration: none;
 }
 .wb-automated h1 {
-  font-weight: 100;
+  font-weight: 300;
   text-transform: uppercase;
   font-size: 60px;
   font-size: 5vw;
-/*  color: #d9d5d2;*/
   text-align: right;
 }
 .wb-rotary h1 {
-  font-weight: 100;
+  font-weight: 300;
   text-transform: uppercase;
   font-size: 60px;
   font-size: 5vw;
-/*  color: #d9d5d2;*/
 }
-.list-group-item.active {
+.list-group-item.header, .list-group-item.header:active, .list-group-item.header:hover {
   font-family: 'Roboto Slab', 'Lato', sans-serif;
   background-color: #565656;
   border-color: #565656;
+  color: #fff;
 }
 a.list-group-item {
   color: #444;
@@ -407,7 +413,4 @@ footer .footer-logo {
   padding-left: 4px;
   padding-right: 4px;
   color: #81674b;
-}
-.copyright .glyphicon {
-  text-align: right;
 }
