--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -8,7 +8,7 @@
   .product-thumbnails a.btn {
     top:80px;
   }
-  body#home .col-md-3 img, body#home .col-md-2 img {
+  body.home .col-md-3 img, body.home .col-md-2 img {
     max-width: 200px;
   }
 }
@@ -28,7 +28,7 @@
   body {
     padding-top: 88px;
   }
-  body#home .col-md-3 img, body#home .col-md-2 img {
+  body.home .col-md-3 img, body.home .col-md-2 img {
     margin-left: auto;
     margin-right: auto;
   }
