--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,6 +124,10 @@ p {
   border-top: 1px solid #e9e9e9;
   margin-bottom: 30px;
 }
+.to-top i {
+  position: relative;
+  top:-3px;
+}
 /* Header & Navigation */
 .navbar .utilities {
 /*  background-color: #444;*/
@@ -395,6 +399,9 @@ a.list-group-item {
 .footer-cta a:hover, .footer-cta a:hover>span {
   color: #fff;
   text-decoration: none;
+  transition-property: color;
+  transition-duration: 0.1s;
+  transition-timing-function: ease-out;
 }
 .footer-cta i {
   font-size: 90%;
