Product page fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,7 @@ a {
   color: #9c8061;
 }
 a:hover {
-  color: #9c8061;
+  color: #81674b;
   text-decoration: none;
 }
 a:active, a:visited, a:focus {
