--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -552,9 +552,35 @@ a.list-group-item {
   float:none;
 }
 .related img {
-/*  max-width: 80%;*/
   margin-left: auto;
   margin-right: auto;
+}
+.product-testimonials .insight {
+  width: 300px;
+  opacity: 0.7;
+  background-color: black;
+  bottom: 20%;
+  left: 10%;
+  padding: 20px;
+  z-index: 10;
+  position: absolute;
+}
+.product-testimonials .insight img {
+  max-width: 75%;
+}
+.product-testimonials .insight p {
+  color: #fff;
+  font-style: italic;
+  font-size: 18px;
+  font-size: 1.5vw;
+  line-height: 1.6;
+  margin-bottom: 15px;
+}
+.product-testimonials .insight p.signed {
+  float: right;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-size: 1.2vw;
 }
 
 /* Footers */
