--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -59,7 +59,6 @@
   #wordCarousel .item p.attrib {
   font-size: 90%;
   }
-  /* Landing Pages */
   .landing-nav .landing-nav-btn.automated {
   border-bottom: 3px solid #fff;
   border-right: 0;
@@ -71,11 +70,16 @@
     width: 220px;
     bottom: 20px;
   }
-  .product-testimonials .insight img {
+  .product-testimonials .insight>img {
     max-width: 20%;
   }
   .product-testimonials .insight p {
-    margin-bottom: 10px;
+    margin-bottom: 0;
+    font-size: 12px;
+  }
+  .product-testimonials .insight p.signed {
+    margin-bottom: 0;
+    font-size: 10px;
   }
 }
   
