Contact page progress

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -102,4 +102,7 @@
   .product-testimonials .insight {
     display: none;
   }
+  .contact .first .dealer {
+    border-top: 1px dotted #eee;
+  }
 }
