--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -55,6 +55,9 @@ p {
 .thin {
   font-weight: 300;
 }
+.grey {
+  color: #888;
+}
 .padding-30 {
   padding: 30px;
 }
@@ -370,7 +373,8 @@ p {
 .landing-nav .landing-nav-btn.automated {
   border-right: 3px solid #fff;
   border-left: 3px solid #fff;
-}.landing-nav .landing-nav-btn.rotary {
+}
+.landing-nav .landing-nav-btn.rotary {
   border-right: 3px solid #fff;
 }
 .landing-nav .landing-nav-btn i {
@@ -396,6 +400,9 @@ p {
 }
 .landing-nav .landing-nav-btn a:hover {
   background-color: #c3b2a0;
+  transition-property: background-color;
+  transition-duration: 0.4s;
+  transition-timing-function: ease-out;
 }
 .wb-automated h1 {
   font-weight: 300;
@@ -466,7 +473,7 @@ a.list-group-item {
 .dropdown-menu>li>a {
     padding: 0;
 }
-.panel-group .panel {
+#product .panel-group .panel {
   border-radius: 0;
   margin-bottom: 0px;
   background-color: transparent;
@@ -475,40 +482,40 @@ a.list-group-item {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
-.panel-default>.panel-heading {
+#product .panel-default>.panel-heading {
   background: none;
   padding: 8px 0;
 }
-.panel-title {
+#product .panel-title {
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: .05rem;
   color: #949494;
 }
-.panel-heading span.glyphicon {
+#product .panel-heading span.glyphicon {
     float: right;
     color: #9c8061;
 }
-.panel-heading>h4>a {
+#product .panel-heading>h4>a {
   display: block;
   width: 100%;
   height: 100%;
 }
-.panel-heading>h4>a:hover {
+#product .panel-heading>h4>a:hover {
   color: #9c8061;
 }
-.panel-body {
+#product .panel-body {
   color: #585858;
 }
-.panel-body ul {
+#product .panel-body ul {
   padding-left: 0;
 }
-.panel-body ul li {
+#product .panel-body ul li {
   list-style: none;
   padding: 8px 0;
   border-bottom: 1px dotted #eee;
 }
-.panel-body ul li:last-of-type {
+#product .panel-body ul li:last-of-type {
   border-bottom: 0;
 }
 .table.specs>tbody>tr {
@@ -598,6 +605,14 @@ a.list-group-item {
 }
 
 /* Contact Page */
+#map-canvas {
+  width: 100%;
+  height: 180px;
+  margin-bottom: 15px;
+}
+.contact-nav {
+  padding-top: 10px;
+}
 .contact .nav-tabs {
   padding-left: 30px;
 }
@@ -620,6 +635,9 @@ a.list-group-item {
 .contact .tab-content {
   background-color: #f6f6f6; 
   border-bottom: 1px solid #ddd;
+}
+.contact .tab-content h2, .contact .tab-content h3 {
+  letter-spacing: .05rem;
 }
 .contact .tab-content ol>li {
   padding: 4px;
@@ -650,6 +668,9 @@ a.list-group-item {
   word-wrap: break-word;
   white-space: normal;
 }
+.contact-method .btn.share {
+  font-size: .9vmax;
+}
 #contactform input,
 #contactform textarea {
   margin-bottom: 14px;
@@ -672,10 +693,53 @@ a.list-group-item {
   border-radius: 0;
   resize: vertical;
 }
-#map-canvas {
+.contact .panel-group .panel {
+  border-radius: 0;
+}
+.contact .panel-default {
+  border: 1px solid #ddd;
+}
+.contact .panel-default>.panel-heading {
+  padding: 0;
+  border-radius: 0;
+  background-color: #d9d5d2;
+/*
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,0,0,.1);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,0,0,.1);
+*/
+}
+.contact .panel-title>a {
+  display: block;
   width: 100%;
-  height: 180px;
-  margin-bottom: 15px;
+  height: 100%;
+  padding: 15px;
+  color: #444;
+  font-size: 20px;
+  font-weight: 800;
+  font-family: 'Roboto Slab';
+  text-transform: uppercase;
+  letter-spacing: .15rem;
+}
+.contact .panel-title>a:hover {
+  background-color: #c3b2a0;
+  transition-property: background-color;
+  transition-duration: 0.4s;
+  transition-timing-function: ease-out;
+}
+.contact .panel-title i {
+  float: right;
+}
+.contact .dealer {
+  padding-right: 40px;
+  border-top: 1px dotted #eee;
+}
+.contact .first .dealer {
+  border-top: none;
+}
+.contact .dealer h4 {
+  margin: 20px 0 5px 0;
+  font-size: 16px;
+  font-weight: 600;
 }
 
 
@@ -699,7 +763,7 @@ a.list-group-item {
 .footer-cta a:hover, .footer-cta a:hover>span {
   color: #fff;
   transition-property: color;
-  transition-duration: 0.1s;
+  transition-duration: 0.4s;
   transition-timing-function: ease-out;
 }
 .footer-cta i {
