--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -608,13 +608,14 @@ a.list-group-item {
 #map-canvas {
   width: 100%;
   height: 180px;
-  margin-bottom: 15px;
+  margin-bottom: 0;
 }
 .contact-nav {
-  padding-top: 10px;
+  padding-top: 20px;
 }
 .contact .nav-tabs {
   padding-left: 30px;
+  border-bottom: 0;
 }
 .contact .nav-tabs>li>a {
   border-radius: 0;
@@ -634,7 +635,7 @@ a.list-group-item {
 }
 .contact .tab-content {
   background-color: #f6f6f6; 
-  border-bottom: 1px solid #ddd;
+  border: 1px solid #ddd;
 }
 .contact .tab-content h2, .contact .tab-content h3 {
   letter-spacing: .05rem;
