--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -700,11 +700,12 @@ a.list-group-item {
 }
 .contact .panel-default {
   border: 1px solid #ddd;
+  margin: 10px;
 }
 .contact .panel-default>.panel-heading {
   padding: 0;
   border-radius: 0;
-  background-color: #d9d5d2;
+  background-color: #c3bfbd;
 /*
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,0,0,.1);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,0,0,.1);
