--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -707,13 +707,13 @@ a.list-group-item {
   border-radius: 0;
 }
 .contact .panel-default {
-  border: 1px solid #ddd;
+  border: 1px solid #d9d5d2;
   margin: 10px;
 }
 .contact .panel-default>.panel-heading {
   padding: 0;
   border-radius: 0;
-  background-color: #c3bfbd;
+  background-color: #d9d5d2;
 /*
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,0,0,.1);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,0,0,.1);
