--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -638,11 +638,6 @@ a.list-group-item {
   border: 1px solid #ddd;
   padding: 20px;
 }
-.contact .tab-content h2 {
-  font-family: 'Roboto Slab', 'Lato', sans-serif;
-  font-weight: 800;
-  letter-spacing: .15rem;
-}
 .contact .tab-content ol>li {
   padding: 4px;
 }
@@ -658,6 +653,9 @@ a.list-group-item {
   padding: 10px 40px;
 }
 .contact-method h2 {
+  font-family: 'Roboto Slab', 'Lato', sans-serif;
+  font-weight: 800;
+  letter-spacing: .15rem;
   margin-bottom: 30px;
 }
 .contact-method h2 i {
@@ -688,7 +686,6 @@ a.list-group-item {
   outline: none;
   border: 1px solid #ddd;
   text-transform: uppercase;
-  letter-spacing: 2px;
   font-size: 11px;
   font-weight: 300;
 }
@@ -707,13 +704,13 @@ a.list-group-item {
   border-radius: 0;
 }
 .contact .panel-default {
-  border: 1px solid #d9d5d2;
+  border: 1px solid #cdc8c4;
   margin: 10px;
 }
 .contact .panel-default>.panel-heading {
   padding: 0;
   border-radius: 0;
-  background-color: #d9d5d2;
+  background-color: #cdc8c4;
 /*
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,0,0,.1);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,0,0,.1);
