--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -749,7 +749,21 @@ a.list-group-item {
   font-size: 16px;
   font-weight: 600;
 }
-
+.contact .dealers-by-region ul {
+  margin: 5px;
+}
+.contact .dealers-by-region ul>li {
+  text-transform: uppercase;
+  font-size: 12px;
+  padding: 2px 0px;
+}
+.contact .dealers-by-region ul.list-inline>li {
+  border-right: 1px solid #ccc;
+  padding: 2px 10px;
+}
+.contact .dealers-by-region ullist-inline>li:last-of-type {
+  border-right: 0;
+}
 
 /* Footers */
 .footer-cta {
